syntax = "proto3";

option csharp_namespace = "Persistify.Grpc.Protos";

package ping;

message PingRequest {
}

message PingResponse {
  string message = 1;
}

message ValidationErrorPingRequest {
  string message = 1;
}

message ValidationErrorPingResponse {
}

service PingService {
  rpc Ping (PingRequest) returns (PingResponse) {}
  rpc ValidationErrorPing (ValidationErrorPingRequest) returns (ValidationErrorPingResponse) {}
}
